--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -99,15 +99,15 @@
   <div class="circle large"></div>
 
   <h1>🚀 Welcome to Graph Visualizer</h1>
- <p>
-Explore graph algorithms in action!  
-See <b>Dijkstra</b> (shortest paths), <b>Bellman–Ford</b> (negative edges),  
-<b>Floyd–Warshall</b> (all-pairs), and <b>A*</b> (heuristic search).  
-Visualize paths and make graphs come alive with a click!
-</p>
+  <p>
+    Explore graph algorithms in action!  
+    See <b>Dijkstra</b> (shortest paths), <b>Bellman–Ford</b> (negative edges),  
+    <b>Floyd–Warshall</b> (all-pairs), and <b>A*</b> (heuristic search).  
+    Visualize paths and make graphs come alive with a click!
+  </p>
 
-
-  <a href="{{ url_for('index') }}">Enter Visualizer</a>
+  
+  <a href="/index">Enter Visualizer</a>
 
 </body>
 </html>
